sorted out footer, started organizing contact, fixed spacing issues for projects

--- a/styles/scss/_about.scss
+++ b/styles/scss/_about.scss
@@ -6,6 +6,7 @@
     .wrapper{
         display: flex;
         position: relative;
+        padding: 20px 0 40px 0;
         button{
             width: 100%;
         }
