--- a/styles/scss/_contact.scss
+++ b/styles/scss/_contact.scss
@@ -7,5 +7,17 @@
     
     h2{
         text-transform: uppercase;
+        font-size: 2.5rem;
+    }
+}
+
+.social-media{
+    display:flex;
+    // grid-template-columns: 33% 33% 33%;
+    text-align: center;
+    justify-content: space-evenly;
+    padding: 0;
+    li{
+        font-size: 4rem;
     }
 }
