--- a/styles/scss/_headerFooter.scss
+++ b/styles/scss/_headerFooter.scss
@@ -8,3 +8,11 @@
         text-transform: uppercase;
     }
 }
+
+footer{
+    text-align:center;
+    background: $secondary;
+    margin: 0;
+    display: inline-block;
+    width: 100%;
+}
